--- a/social.html
+++ b/social.html
@@ -15,25 +15,25 @@
 			<br>Siga-me nas redes socias abaixo.
 		</p>
 		<hr>
-		<a href="https://twitter.com/nicaksks">
+		<a href="https://twitter.com/nicaksks" target="_blank">
 			<button class="button">Twitter</button>
 		</a>
-		<a href="https://www.instagram.com/nicaksks/">
+		<a href="https://www.instagram.com/nicaksks/" target="_blank">
 			<button class="button">Instagram</button>
 		</a>
-		<a href="https://www.twitch.tv/anniesemtrema">
+		<a href="https://www.twitch.tv/anniesemtrema" target="_blank">
 			<button class="button">Twitch</button>
 		</a>
-		<a href="https://www.youtube.com/@nica">
+		<a href="https://www.youtube.com/@nica" target="_blank">
 			<button class="button">YouTube</button>
 		</a>
-		<a href="https://www.tiktok.com/@nicaksks">
+		<a href="https://www.tiktok.com/@nicaksks" target="_blank">
 			<button class="button">Tiktok</button>
 		</a>
-		<a href="https://discord.com/invite/AsVWNmG">
+		<a href="https://discord.com/invite/AsVWNmG" target="_blank">
 			<button class="button">Discord</button>
 		</a>
-		<a href="https://github.com/nicaksks">
+		<a href="https://github.com/nicaksks" target="_blank">
 			<button class="button">Github</button>
 		</a>
 </div>
