--- a/social.html
+++ b/social.html
@@ -15,26 +15,29 @@
 			<br>Siga-me nas redes socias abaixo.
 		</p>
 		<hr>
-		<a href="https://twitter.com/nicaksks" target="_blank">
+		<a href="https://twitter.com/nicaksks">
 			<button class="button">Twitter</button>
 		</a>
-		<a href="https://www.instagram.com/nicaksks/" target="_blank">
+		<a href="https://www.instagram.com/nicaksks/">
 			<button class="button">Instagram</button>
 		</a>
-		<a href="https://www.twitch.tv/anniesemtrema" target="_blank">
+		<a href="https://www.twitch.tv/anniesemtrema">
 			<button class="button">Twitch</button>
 		</a>
-		<a href="https://www.youtube.com/@nica" target="_blank">
+		<a href="https://www.youtube.com/@nica">
 			<button class="button">YouTube</button>
 		</a>
-		<a href="https://www.tiktok.com/@nicaksks" target="_blank">
+		<a href="https://www.tiktok.com/@nicaksks">
 			<button class="button">Tiktok</button>
 		</a>
-		<a href="https://discord.com/invite/AsVWNmG" target="_blank">
+		<a href="https://discord.com/invite/AsVWNmG">
 			<button class="button">Discord</button>
 		</a>
-		<a href="https://github.com/nicaksks" target="_blank">
+		<a href="https://github.com/nicaksks">
 			<button class="button">Github</button>
+		</a>
+		<a href="https://nicaksks.github.io/nica/wishlist">
+			<button class="button">Lista de Desejos</button>
 		</a>
 </div>
 </body>
