--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 	<script src="./assets/js/index.js" defer></script>
 	<script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
-	<title id="nickname">Carregando...</title>
+	<title id="nickname">Loading...</title>
 </head>
 <body>
 <div class="container">
   <div class="card">
   	<img id="avatar" src="assets/imgs/avatar/enma.png">
-  	<p id="bio">Carrengado...</p>
+  	<p id="bio">Loading...</p>
 		<hr>
-		<span id="p">Carrengado...</span>	
+		<span id="p">Loading...</span>	
 		<hr>
 		<div id="repos">
   </div>
