--- a/discord.html
+++ b/discord.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Redirect...</title>
-	<meta http-equiv="refresh" content="0; URL='https://discord.gg/AsVWNmG'"/>
-</head>
-Se você não for redirecionado logo em seguida <b><a href="https://discord.gg/AsVWNmG">CLIQUE AQUI</a></b>
-</html>
+<script>window.location="https://discord.gg/AsVWNmG"</script>
